bugfix choise avatar remove scrollbar and send email auth

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,7 @@ body {
   box-sizing: border-box;
   min-height: 100vh;
   width: 100%;
+  overflow-y: hidden !important;
 }
 
 * {
